# Alara

./: .env.example  .gitignore  README.md  __main__.py  constraints.txt  main.py  pyproject.toml  requirements.txt  setup.py
.alara/: config.json
agents/: base.py  browser_agent.py  coding_agent.py  comms_agent.py  document_agent.py  filesystem_agent.py  registry.py  research_agent.py  writing_agent.py
alara/: __init__.py  __main__.py  db.py  main.py
alara/agents/: executor.py  models.py  planner.py  registry.py
alara/capabilities/: __init__.py  coding.py  comms.py  files.py  generic_mcp.py  memory.py  research.py  task_manager.py  watcher.py  writing.py
alara/coding/: base.py  (+5 more)
capabilities/: __init__.py  base.py  browser.py  cli.py  code.py  composio_capability.py  document.py  filesystem.py  system.py
config/: alara.toml
core/: __init__.py  assistant.py  audio_preprocessor.py  chain.py  code_context.py  context_resolver.py  execution_router.py  executor.py  goal_understander.py  intent_engine.py  master_orchestrator.py  orchestrator.py  pipeline.py  planner.py  recorder.py  reflector.py  transcriber.py  verifier.py  wake_word.py  ws_server.py
integrations/: browser.py  terminal.py  vscode.py  windows_os.py
memory/: __init__.py  database.py  models.py  preferences.py  session.py  skills.py
schemas/: __init__.py  goal.py  task_graph.py
scripts/: connect_gmail.py
server/: websocket_server.py
tests/: conftest.py  run_tests.py  test_errors.py  test_execution_streamlined.py  test_intent.py  test_mcp_client.py  test_planner_streamlined.py  test_registry.py  test_results.json  test_suite.py
ui/: index.html  main.js  package.json  preload.js
utils/: __init__.py  paths.py  platform.py
(+41 files in other folders)
